--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -61,13 +61,6 @@ jobs:
           VCPKG_ENABLE_TESTS: "1"
         run: ".github/scripts/install-vcpkg-macos.bash"
 
-      - name: "Build CoreMLSelfieSegmenter"
-        working-directory: "vendor/CoreMLSelfieSegmenter"
-        run: |
-          brew install xcodegen
-          xcodegen generate
-          ./Scripts/build.bash
-
       - name: "Configure"
         run: "cmake --preset macos"
         
@@ -77,24 +70,22 @@ jobs:
       - name: "Run tests"
         run: "ctest --preset macos --verbose"
 
-  TestCoreMLSelfieSegmenterOnMacOS:
+  TestOnMacOSHomebrew:
     runs-on: "macos-15"
     timeout-minutes: 30
 
     steps:
-      - name: "Checkout"
+      - name: "Checkout project repository"
         uses: "actions/checkout@v5"
 
-      - name: "Install xcodegen"
-        run: "brew install xcodegen"
+      - name: "Configure"
+        run: "cmake --preset macos-homebrew"
+        
+      - name: "Build"
+        run: "cmake --build --preset macos-homebrew"
 
-      - name: "Generate Xcodeproj"
-        working-directory: "vendor/CoreMLSelfieSegmenter"
-        run: "xcodegen generate"
-
-      - name: "Test CoreMLSelfieSegmenter"
-        working-directory: "vendor/CoreMLSelfieSegmenter"
-        run: "./Scripts/test.bash"
+      - name: "Run tests"
+        run: "ctest --preset macos-homebrew --verbose"
 
   TestOnWindows:
     runs-on: "windows-2022"
