--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: "actions/checkout@v5"
 
       - name: "Install dependencies"
-        run: "brew install googletest"
+        run: "brew install googletest fmt"
 
       - name: "Configure"
         run: "cmake --preset macos-homebrew"
