--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -3,9 +3,7 @@ run-name: ${{ github.ref_name }} push run 🚀
 on:
   push:
     branches:
-      - master
       - main
-      - 'release/**'
     tags:
       - '*'
 permissions:
@@ -24,6 +22,9 @@ jobs:
     secrets: inherit
     permissions:
       contents: read
+      packages: write
+    with:
+      production: true
 
   create-release:
     name: Create Release 🛫
