--- a/.github/workflows/pr-pull.yaml
+++ b/.github/workflows/pr-pull.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.event.pull_request.title }} pull request run 🚀
 on:
   workflow_dispatch:
   pull_request:
-    branches: [master, main]
+    branches: [main]
     types: [ opened, synchronize, reopened ]
 permissions:
   contents: read
