--- a/.github/workflows/pr-pull.yaml
+++ b/.github/workflows/pr-pull.yaml
@@ -3,9 +3,7 @@ run-name: ${{ github.event.pull_request.title }} pull request run 🚀
 on:
   workflow_dispatch:
   pull_request:
-    paths-ignore:
-      - '**.md'
-    branches: [master, main]
+    branches: [main]
     types: [ opened, synchronize, reopened ]
 permissions:
   contents: read
@@ -25,3 +23,6 @@ jobs:
     secrets: inherit
     permissions:
       contents: read
+      packages: write
+    with:
+      production: false
