--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveTranscribeFine.json
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveTranscribeFine.json
@@ -34,7 +34,7 @@
         },
         {
           "type": "file",
-          "path": "com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.metainfo.xml"
+          "path": "com.obsproject.Studio.Plugin.LiveTranscribeFine.metainfo.xml"
         }
       ],
       "post-install": [
