Update build workflow to use LiveTranscribeFine
Changed build directories and Flatpak bundle/manifest references from LiveBackgroundRemovalLite to LiveTranscribeFine in the GitHub Actions workflow. This aligns the CI process with the new plugin target.

--- a/.github/workflows/my-unsupported-build.yaml
+++ b/.github/workflows/my-unsupported-build.yaml
@@ -41,7 +41,7 @@ jobs:
           pacman -Sy --noconfirm
 
       - name: "Build"
-        working-directory: "unsupported/arch/live-backgroundremoval-lite"
+        working-directory: "unsupported/arch/live-transcribe-fine"
         run: "sudo -u builder makepkg -s --noconfirm"
 
   BuildOnArchGit:
@@ -64,7 +64,7 @@ jobs:
           pacman -Sy --noconfirm
 
       - name: "Build"
-        working-directory: "unsupported/arch/live-backgroundremoval-lite-git"
+        working-directory: "unsupported/arch/live-transcribe-fine-git"
         run: "sudo -u builder makepkg -s --noconfirm"
 
   BuildFlatpak:
@@ -83,6 +83,6 @@ jobs:
       - name: "Build Flatpak"
         uses: "flatpak/flatpak-github-actions/flatpak-builder@10a3c29f0162516f0f68006be14c92f34bd4fa6c"
         with:
-          bundle: "com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite"
-          manifest-path: "unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json"
+          bundle: "com.obsproject.Studio.Plugin.LiveTranscribeFine"
+          manifest-path: "unsupported/flatpak/com.obsproject.Studio.Plugin.LiveTranscribeFine.json"
           cache-key: "flatpak-builder-${{ github.sha }}"
