Remove unsupported packaging and Homebrew build
Deleted unsupported Arch and Flatpak packaging files, related GitHub workflow, and Homebrew-specific CMake logic and presets. Added Vosk-based transcription to MainPluginContext and updated CMake to require Vosk. This streamlines the project by focusing on supported build methods and integrating Vosk transcription.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,6 @@ if(ENABLE_QT)
 endif()
 
 option(BUILD_TESTING "Build tests" OFF)
-option(BUILD_WITH_HOMEBREW "Build with Homebrew on macOS" OFF)
 option(USE_PKGCONFIG "Use pkg-config to find dependencies" OFF)
 
 if(VCPKG_TARGET_TRIPLET)
@@ -45,6 +44,7 @@ if(VCPKG_TARGET_TRIPLET)
 
   find_package(CURL CONFIG REQUIRED)
   find_package(fmt CONFIG REQUIRED)
+  find_package(vosk CONFIG REQUIRED)
 elseif(USE_PKGCONFIG)
   find_package(PkgConfig REQUIRED)
 
@@ -63,14 +63,6 @@ elseif(USE_PKGCONFIG)
   target_include_directories(fmt::fmt INTERFACE ${PC_FMT_INCLUDE_DIRS})
   target_compile_definitions(fmt::fmt INTERFACE ${PC_FMT_CFLAGS_OTHER})
   target_link_directories(fmt::fmt INTERFACE ${PC_FMT_LIBRARY_DIRS})
-elseif(APPLE AND BUILD_WITH_HOMEBREW)
-  list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
-  list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
-  list(APPEND CMAKE_PREFIX_PATH /usr/local/opt/libomp)
-  list(APPEND CMAKE_PREFIX_PATH /usr/local)
-
-  find_package(CURL MODULE REQUIRED)
-  find_package(fmt CONFIG REQUIRED)
 else()
   message(FATAL_ERROR "Either USE_PKGCONFIG or VCPKG_TARGET_TRIPLET must be set.")
 endif()
