Integrate Vosk library and update audio filtering
Added vosk::vosk to target_link_libraries in CMakeLists.txt to enable Vosk integration. Updated MainPluginContext.cpp to improve logging and correct sample count handling for Vosk transcription. Modified install-vcpkg-macos.bash to use VCPKG_DISABLE_TESTS for test feature control.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ target_sources(
     src/Core/MainPluginContext.cpp
     src/plugin-main.c
 )
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs BridgeUtils UpdateChecker)
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs BridgeUtils UpdateChecker vosk::vosk)
 if(Backward_FOUND)
   target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Backward::Backward)
   target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_BACKWARD)
